2011-02-01	Ralf Corsepius <ralf.corsepius@rtems.org>

	* libmisc/Makefile.am: Add stringto/stringtolongdouble.c.
	* libmisc/stringto/stringtolongdouble.c: New.
	* libmisc/stringto/stringto.h: Rename header-guard.
	Add rtems_string_to_long_double.
	* libmisc/stringto/stringtoint.c: Reformat range check.
	Add check for result==0.
	* libmisc/stringto/stringtofloat.c: Reformat range check.
	Add check for result = -HUGE_VALF.
	* libmisc/stringto/stringtodouble.c: Reformat range check.
	Add check for result = -HUGE_VAL.
	* libmisc/stringto/stringtolonglong.c: Reformat range check.
	c99 portability improvements. Add check for result==0.
	* libmisc/stringto/stringtounsignedlonglong.c: Reformat range check.
	c99 portability improvements.
	* libmisc/stringto/stringtounsignedlong.c: Reformat range check.
	* libmisc/stringto/stringtolong.c:  Reformat range check.
	Add check for result==0.

2011-02-01	Ralf Corsepius <ralf.corsepius@rtems.org>
	
	* libmisc/Makefile.am: Remove stringto/stringto_template.h.
	* libmisc/stringto/stringto_template.h: Remove.

	* libmisc/stringto/stringtodouble.c,
	libmisc/stringto/stringtofloat.c: Rework.

	* libmisc/stringto/stringtolong.c,
	libmisc/stringto/stringtolonglong.c,
	libmisc/stringto/stringtounsignedlong.c,
	libmisc/stringto/stringtounsignedlonglong.c:
	Rework.

2011-01-31	Ralf Corsepius <ralf.corsepius@rtems.org>

	* libmisc/stringto/stringtoint.c,
	libmisc/stringto/stringtounsignedint.c,
	libmisc/stringto/stringtounsignedchar.c: Rework.

	* libmisc/stringto/stringtopointer.c: Rework.

2011-01-28	Joel Sherrill <joel.sherrill@OARcorp.com>

	* include/rtems/bspIo.h, include/rtems/concat.h, include/rtems/irq.h,
	score/cpu/i386/rtems/score/idtr.h,
	score/cpu/powerpc/rtems/powerpc/registers.h,
	score/src/objectidtoname.c, score/src/schedulerpriorityblock.c,
	score/src/schedulerpriorityschedule.c,
	score/src/schedulerpriorityunblock.c,
	score/src/schedulerpriorityyield.c, score/src/thread.c,